--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LaravelInertiaVueSpa
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=mysql 
+DB_PORT=3306 
+DB_DATABASE=LaravelInertiaVueSpa.Database_2024!
+DB_USERNAME=root  
+DB_PASSWORD=LaravelInertiaVueSpa.Password_2024!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
