--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   application:
     restart: always
@@ -10,6 +8,7 @@ services:
       - "9000:9000"
     depends_on:
       - mysql
+    command: bash -c "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=9000"
 
   mysql:
     image: mysql:latest
@@ -17,4 +16,4 @@ services:
       MYSQL_DATABASE: LaravelInertiaVueSpa.Database_2024!
       MYSQL_ROOT_PASSWORD: LaravelInertiaVueSpa.Password_2024!
     ports:
-      - "3307:3307"
+      - "3307:3306"
