--- a/.github/workflows/phpunit_action.yml
+++ b/.github/workflows/phpunit_action.yml
@@ -49,4 +49,5 @@ jobs:
         CACHE_DRIVER: array
         SESSION_DRIVER: array
         QUEUE_DRIVER: sync
+        APP_ENV: testing
       run: vendor/bin/phpunit
