chore: modify .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=LaravelInertiaVueSpa
-APP_ENV=local ## or 'testing'
+APP_ENV=testing ## or 'testing'
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
