--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=LaravelInertiaVueSpa
-APP_ENV=local
+APP_ENV=testing ## or 'testing'
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -8,12 +8,16 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# use this for docker
 DB_CONNECTION=mysql
-DB_HOST=mysql 
-DB_PORT=3306 
+DB_HOST=mysql
+DB_PORT=3306
 DB_DATABASE=LaravelInertiaVueSpa.Database_2024!
-DB_USERNAME=root  
+DB_USERNAME=root
 DB_PASSWORD=LaravelInertiaVueSpa.Password_2024!
+
+# modify this for sqlite
+# DB_DATABASE=/home/${yourusername}/${path}/database/database.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
