--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
     "private": true,
     "scripts": {
         "dev": "vite --host",
-        "build": "vite build"
+        "build": "vite build",
+        "commit-msg": "npx --no-install commitlint --edit $1"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "npx --no-install commitlint --edit $1"
+        }
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.6.1",
+        "@commitlint/config-conventional": "^19.6.0",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.7.7",
+        "husky": "^4.3.8",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
