chore: modify dependabot.yml file

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "composer" 
-    directory: "/" 
+    directory: "/application" 
     schedule:
       interval: "daily"
     commit-message:
