--- a/application/composer.json
+++ b/application/composer.json
@@ -2,16 +2,22 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "friendsofphp/php-cs-fixer": "^3.68",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^1.0.0",
         "laravel/framework": "^10.0",
         "laravel/jetstream": "^4.1.1",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "squizlabs/php_codesniffer": "^3.11",
         "tightenco/ziggy": "^2.2"
     },
     "require-dev": {
@@ -50,6 +56,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "lint": [
+            "phpcs --standard=phpcs.xml app",
+            "php-cs-fixer fix --dry-run --diff"
         ]
     },
     "extra": {
